# case-study-data-engineering-process

./: .env_template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/raw/: data.parquet  db_export.parquet  logs_export.parquet
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/staging/: __sources.yml
src/utils/: config.py
