[project]
name = "case-study-data-engineering-process"
version = "0.1.0"
description = "MDPI case study for process Data Engineers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-manager>=1.7.0",
    "adbc-driver-postgresql>=1.7.0",
    "bs4>=0.0.2",
    "dbt>=1.0.0.40.5",
    "dbt-postgres>=1.9.0",
    "duckdb>=1.3.2",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "sqlalchemy>=2.0.43",
    "sqlfluff>=3.4.2",
]
